--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -1,10 +1,10 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    {{ title }}
+    {{ entry }}
 {% endblock %}
 
 {% block body %}
-    <h1>All Pages</h1>
+    <h1>{{ entry }}</h1>
     
 {% endblock %}
