Attempt to fix search to open correct page or show matching results

--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -5,5 +5,8 @@
 {% endblock %}
 
 {% block body %}
-    
+    <h2>Search results for {{ search }}</h2>
+    {% for match in matches %}
+        <li><a href="wiki/{{ match }}">{{ match }}</a> </li>
+    {% endfor %}
 {% endblock %}
