--- a/encyclopedia/templates/encyclopedia/new.html
+++ b/encyclopedia/templates/encyclopedia/new.html
@@ -5,5 +5,11 @@
 {% endblock %}
 
 {% block body %}
-
+    <h1>Create New Page</h1>
+    <form action="{% url 'new' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit">
+    </form>
+    <a href="{% url 'index' %}">Home</a>
 {% endblock %}
