--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -1,10 +1,9 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    {{ entry }}
+    Edit Page
 {% endblock %}
 
 {% block body %}
-    {{ page|safe }}
-    <a href="/wiki/{{ entry }}/edit">Edit Page</a>
+
 {% endblock %}
