Fill out edit function and page

--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -5,5 +5,11 @@
 {% endblock %}
 
 {% block body %}
-
+    <h1>{{ entry }}</h1>
+    <form action="/wiki/{{ entry }}/edit" method="post">
+        {% csrf_token %}
+        <textarea name="content" rows="5" cols="10">{{ page }}</textarea>
+        <input type="submit" value="Save">
+    </form>
+    <a href="{% url 'entry' entry %}">Home</a>
 {% endblock %}
