--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -23,7 +23,7 @@
                     <a href="{% url 'new' %}">Create New Page</a>
                 </div>
                 <div>
-                    <a href="{% url 'random' %}">Random Page</a>
+                    <a href="{% url 'randompg' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
