--- a/encyclopedia/templates/encyclopedia/dne_error.html
+++ b/encyclopedia/templates/encyclopedia/dne_error.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block body %}
-    <p>The requested page for '{{ entry }}' does not exist.</p>
+    <p>The requested page for '{{ title }}' does not exist.</p>
 {% endblock %}
