--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -1,10 +1,10 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    {{ entry }}
+    {{ title }}
 {% endblock %}
 
 {% block body %}
     {{ page|safe }}
-    <a href="/wiki/{{ entry }}/edit">Edit Page</a>
+    <a href="/wiki/{{ title }}/edit">Edit Page</a>
 {% endblock %}
