--- a/encyclopedia/templates/encyclopedia/new.html
+++ b/encyclopedia/templates/encyclopedia/new.html
@@ -8,8 +8,13 @@
     <h1>Create New Page</h1>
     <form action="{% url 'new' %}" method="post">
         {% csrf_token %}
-        {{ form }}
+        {{ form.title.label }} <br />
+        {{ form.title }}
+        <br /><br />
+        {{ form.content.label }}<br />
+        {{ form.content }}<br />
         <input type="submit">
     </form>
+    <br /><br />
     <a href="{% url 'index' %}">Home</a>
 {% endblock %}
