Fix minor bugs and clean code

--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -11,5 +11,5 @@
         <textarea name="content" rows="5" cols="10">{{ page }}</textarea>
         <input type="submit" value="Save">
     </form>
-    <a href="{% url 'title' title %}">Home</a>
+    <a href="{% url 'entry' title %}">Home</a>
 {% endblock %}
